# dale

./: .gitignore  Cargo.toml  build.rs  readme.md  temp.txt
plugins/: rs.toml  snw.toml
src/: main.rs  screen.rs  syntax.rs
