[package]
name = "dale"
version = "0.1.2"
edition = "2021"
description = "Dustin's Awesome Line Editor"
license = "GPL-3.0-only"
readme = "./readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
regex = "1.9.5"
toml = "0.7.5"
