[package]
name = "dale"
version = "0.1.5"
edition = "2021"
description = "Dustin's Awesome Line Editor"
license-file = "LICENSE"
readme = "./readme.md"
include = ["/src", "/plugins", "/build.rs"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
regex = "1.9.5"
toml = "0.7.5"
